infrastructure/longhorn/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app.kubernetes.io/name: longhorn
    app.kubernetes.io/instance: longhorn
  name: longhorn-ingress
  namespace: longhorn-system
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`longhorn.krosf.com`)
      middlewares:
        - name: traefik-forward-auth
          namespace: traefik
      services:
        - kind: Service
          name: longhorn-frontend
          port: 80
